# tiny

crates/libtiny_client/examples/: echo.rs
crates/libtiny_client/src/: lib.rs  state.rs
crates/libtiny_logger/: Cargo.toml
crates/libtiny_logger/src/: lib.rs
crates/libtiny_tui/: Cargo.toml
crates/libtiny_tui/benches/: bench.rs
crates/libtiny_tui/examples/: bench.rs  chat.rs  completion.rs
crates/libtiny_tui/src/: lib.rs  messaging.rs  tui.rs
crates/libtiny_tui/src/tests/: layout.rs  mod.rs  resize.rs
crates/libtiny_wire/: Cargo.toml
crates/libtiny_wire/src/: lib.rs
crates/tiny/: Cargo.toml
crates/tiny/src/: conn.rs  debug_logging.rs  tests.rs  ui.rs
